--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     <!-- header-area end -->
   </header>
   <!-- header end -->
-
-  <!-- Start Slider Area -->
+<!-- Start Slider Area -->
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
@@ -118,11 +117,11 @@
               <div class="slider-content">
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInDown" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">Your Best Solution Provider </h2>
+                  <h2 class="title1">The Best Solution Provider </h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">We always supply you with the right solutions. You Start Your Services.</h1>
+                  <h1 class="title2">We're In The Banking System Of Solutions You Start Your Services</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -143,11 +142,11 @@
               <div class="slider-content text-center">
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">Renewable energy pioneers</h2>
+                  <h2 class="title1">Ready for New Era</h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">We're providing solar power plant operation management services.</h1>
+                  <h1 class="title2">We're In The Banking Solution Of Get Quality System Integration Service</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -172,7 +171,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Provides core competencies for system integration success.</h1>
+                  <h1 class="title2">Helping Electronic Banking & Web Services for Your Bank</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -187,6 +186,7 @@
     </div>
   </div>
   <!-- End Slider Area -->
+
 
   <!-- Start About area -->
   <div id="about" class="about-area area-padding">
